# asterisk

./: .dockerignore  .gitignore  makefile  manage.py  pyproject.toml  setup.cfg
common/: admin.py  models.py
common/management/commands/: wait_for_db.py
config/: admin_settings.py  asgi.py  urls.py  urls_dev.py  wsgi.py
config/settings/: base.py  dev.py  local.py  production.py  test.py  utils.py
users/: models.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py
